--- a/.github/site/overrides/partials/comments.html
+++ b/.github/site/overrides/partials/comments.html
@@ -4,7 +4,7 @@
         data-repo-id="R_kgDOHD-S9w"
         data-category="Announcements"
         data-category-id="DIC_kwDOHD-S984Cjxgx"
-        data-mapping="pathname"
+        data-mapping="url"
         data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="0"
